--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,17 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
+}
+
+.app {
+  width: min-width(1280px, 100%);
+  padding: 1em;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
 }
 
@@ -47,6 +52,33 @@ h2 {
   align-items: center;
   justify-content: center;
   gap: 8px;
+}
+
+.exchange-card,
+.deposit-card {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+#amount-input {
+  padding: 8px 16px;
+}
+
+#currency-select {
+  padding: 8px;
+}
+
+.user-label-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+select {
+  padding: 8px;
 }
 
 button {
