--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffffde;
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
@@ -32,7 +26,7 @@ body {
 }
 
 .app {
-  width: min-width(1280px, 100%);
+  width: min(1280px, 100%);
   padding: 1em;
 }
 
