--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: #ffffffde;
-  background-color: #242424;
+  color: #000;
+  background-color: #0c0c0c;
 }
 
 a {
@@ -26,9 +32,21 @@ body {
 }
 
 .app {
-  width: min(1280px, 100%);
-  padding: 1em;
+  width: 480px;
+  margin: auto;
+  background-color: #c7fcc2;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem 0;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 
 h1 {
   font-size: 2em;
