--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   background-color: #0c0c0c;
 }
 
+#root {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -32,13 +38,14 @@ body {
 }
 
 .app {
-  width: 480px;
+  width: fit-content;
   margin: auto;
   background-color: #c7fcc2;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 2rem 0;
+  padding: 2rem 1rem;
+  border-radius: 4px;
 }
 
 .container {
@@ -46,7 +53,6 @@ body {
   flex-direction: column;
   gap: 1rem;
 }
-
 
 h1 {
   font-size: 2em;
@@ -89,8 +95,12 @@ h2 {
   gap: 8px;
 }
 
-select {
+select.currencies {
   padding: 8px;
+}
+
+input {
+  padding-inline: 8px;
 }
 
 button {
